deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtube-downloader
  template:
    metadata:
      labels:
        app: youtube-downloader
    spec:
      containers:
      - name: youtube-downloader
        image: mohamedashrafx98/youtube-downloader:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: downloads-volume
          mountPath: /app/downloads  # Mounts persistent storage for downloaded videos
      volumes:
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: youtube-downloader-pvc
