service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-downloader-service
spec:
  selector:
    app: youtube-downloader
  ports:
    - protocol: TCP
      port: 5000         # The port exposed on the Service (inside the cluster)
      targetPort: 5000 # The container's port
      nodePort: 30050  # External access via NodePort (must be in 30000-32767 range)
  type: NodePort
